k8s/ingress/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port: 
              number: 8080
      - path: /api/gateway(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: customers-service
            port: 
              number: 8081
      - path: /api/customer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: customers-service
            port: 
              number: 8081
      - path: /api/visit(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: visits-service
            port: 
              number: 8082
      - path: /api/vet(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: vets-service
            port: 
              number: 8083
